! -> Note

21-Dec-2011 Mark Dexter
 # [#27349] Replace deprecated method getEscaped
 # [#27414] Implement a administrator/templates/hathor/html/com_users/notes/default.php layout in hathor plus other bug fixes
 # [#27444] Sample Data for SQLServer and SQLAzure sync
 # [#27449] Synch up with platform changes as of CMS beta 2.5
 # [#27442] Add the #__user_notes table in sqlsrv and sqlazure

20-Dec-2011 Mark Dexter
 # [#27436] User Notes breaks admin login for some groups
 # [#27435] * Plugin redirect patch
 + [#26783] Use the images and urls fields to create simple standardized layouts

20-Dec-2011 Jean-Marie Simonet
 # [#27416] *Strict in com_users
 # [#27261] strict standards on initialise. Thanks Christophe
 # [#27406] Use JDate::toSql(). Thanks Rouven
 # [#27408] Fix some of the new Javascript. Thanks Rouven

19-Dec-2011 Jean-Marie Simonet
 # [#27011] Page Navigation rel next/prev back to front. Thanks James
 # [#27372] Configuration.php-dist for multi-db. Thanks Christophe.
 $ Updating installation ini file hu-HU
 $ Updating installation ini file pt-PT, ru-RU
 + Adding da.gif for mod_languages


19-Dec-2011 Mark Dexter
 # [#27415] Missing platform change for update notification

18-Dec-2011 Christophe Demko
 + [#27371] Category filtering on content doesn't including sub-categories (Ofer Cohen)
 # [#27413] Two fixes to Database files to support seamless installation on multidb (Sudhi Seshachala)
 + [#27306] User Notes (Andrew Eddie)

18-Dec-2011 Mark Dexter
 ^ [#27361] mod_status optimization (Kyle Ledbetter)

18-Dec-2011 Jean-Marie Simonet
 # Correcting Rev 22542 reintroducing error corrected in #27342 (Type display in Plugin Manager)
 $ Miscellaneous corrections to ini strings (duplicate, extraneous spaces). Thanks Valc.
 $ Updating installation ini files ka-GE. Adding new language ur-PK.
 $ Missing string.
 - Taking off unused string (for now) from installation en-GB and en-US added in #27282
 # [#27411] *Batch language action broken for categories.