@@ -179,7 +179,7 @@ class JControllerAdmin extends JController
 			JArrayHelper::toInteger($cid);
 
 			// Publish the items.
-			if (!$model->publish($cid, $value))
+			if (($cidsAffected = $model->publish($cid, $value)) === FALSE)
 			{
 				JError::raiseWarning(500, $model->getError());
 			}
@@ -201,7 +201,7 @@ class JControllerAdmin extends JController
 				{
 					$ntext = $this->text_prefix . '_N_ITEMS_TRASHED';
 				}
-				$this->setMessage(JText::plural($ntext, count($cid)));
+				$this->setMessage(JText::plural($ntext, $cidsAffected));
 			}
 		}
 		$extension = JRequest::getCmd('extension');
