@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#27444] Sample Data for SQLServer and SQLAzure sync
  # [#27449] Synch up with platform changes as of CMS beta 2.5
  # [#27442] Add the #__user_notes table in sqlsrv and sqlazure
+ # [#27257] Unexpected behavior of children in Categories and Menu Items
 
 20-Dec-2011 Mark Dexter
  # [#27436] User Notes breaks admin login for some groups
